static/css/embed.css
html, body, iframe, .iframe-container, #Body {
  width: 100%;
  height: 100%;
  overflow: hidden;
}

.iframe-container {
  position: fixed;
  top: 69px;
  bottom: 0;
  left: 0;
  right: 0;
  padding-bottom: 80px;
}

iframe {
  border: none;
}

.navbar {
  margin-bottom: 0px;
}

.navbar > .container .recipe-navbar-title,
.navbar > .container-fluid .recipe-navbar-title {
  color: #008096;
  font-size: 28px;
  padding-top: 15px;
  margin-left: 0px;
}

